--- a/nav bar assignment 19-12-2023/nav.html
+++ b/nav bar assignment 19-12-2023/nav.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nav</title>
+    <title>NavBar</title>
     <style>
         * {
             margin: 0px;
